src/styles/global.css
/* Custom component styles */
[data-theme='winter'] .highlight:hover {
  box-shadow: #add9f4 0px -1rem 0px inset;
}
[data-theme='winter'] .highlight {
  box-shadow: #add9f4 0px -0.5rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

.highlight:hover {
  box-shadow: #463aa1 0px -1rem 0px inset;
}

.highlight {
  box-shadow: #463aa1 0px -0.5rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

[data-theme='winter'] .highlight-heading:hover {
  box-shadow: #add9f4 0px -4rem 0px inset;
}
[data-theme='winter'] .highlight-heading {
  box-shadow: #add9f4 0px -1rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

.highlight-heading:hover {
  box-shadow: #463aa1 0px -4rem 0px inset;
}

.highlight-heading {
  box-shadow: #463aa1 0px -1rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

[data-theme='winter'] .wave-t {
  @apply text-slate-200;
}
.wave-t {
  @apply text-slate-800;
}
[data-theme='winter'] .wave-b {
  @apply bg-slate-200;
}
.wave-b {
  @apply bg-slate-800;
}

[data-theme='winter'] .footer-text-t {
  @apply text-slate-600;
}
.footer-text-t {
  @apply text-slate-400;
}

[data-theme='winter'] .footer-text-b {
  @apply text-slate-600;
}
.footer-text-b {
  @apply text-slate-400;
}
/* End for custom component styles */

/* Custom utilities */
html,
body {
  height: 100%;
  min-height: 100vh;
}
/* End for custom utilities */

